--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,11 @@
 <div class="row">
   <div class="col-12 col-sm-12">
     <a href="/">{{ site.domain }}</a>
-    was built and maintained from 2016-2021 by
-    <a href="https://twitter.com/abhshkdz">abhshkdz</a>. It is now run by
-    <a href="https://paperswithcode.com/">Papers With Code</a>.<br>
+    by Carolin Brandt, after the template by
+    <a href="https://github.com/paperswithcode/ai-deadlines">paperswithcode/ai-deadlines</a>.
   </div>
 </div>
-<div class="row">
+<!-- <div class="row">
   <div class="col-12 col-sm-12">
     <div class="footer-links">
     <a href="https://paperswithcode.com/site/terms">Terms</a>
@@ -17,4 +16,4 @@
     </a>
   </div>
   </div>
-</div>
+</div> -->
